@@ -1100,7 +1100,7 @@ newDBEnvObject(int flags)
 }
 
 /* Forward declaration */
-static PyObject *DBEnv_close_internal(DBEnvObject* self, int flags);
+static PyObject *DBEnv_close_internal(DBEnvObject* self, int flags, int check_error);
 
 static void
 DBEnv_dealloc(DBEnvObject* self)
@@ -1108,7 +1108,8 @@ DBEnv_dealloc(DBEnvObject* self)
   PyObject *dummy;
 
     if (self->db_env) {
-      dummy=DBEnv_close_internal(self,0);
+      /* Raise exceptions while garbage collection is a fatal error */
+      dummy=DBEnv_close_internal(self, 0, 0);
       Py_XDECREF(dummy);
     }
 
@@ -3968,7 +3969,7 @@ DBC_join_item(DBCursorObject* self, PyObject* args)
 
 
 static PyObject*
-DBEnv_close_internal(DBEnvObject* self, int flags)
+DBEnv_close_internal(DBEnvObject* self, int flags, int check_error)
 {
     PyObject *dummy;
     int err;
@@ -3992,7 +3993,9 @@ DBEnv_close_internal(DBEnvObject* self, int flags)
         /* after calling DBEnv->close, regardless of error, this DBEnv
          * may not be accessed again (Berkeley DB docs). */
         self->db_env = NULL;
-        RETURN_IF_ERR();
+        if (check_error) {
+            RETURN_IF_ERR();
+        }
     }
     RETURN_NONE();
 }
@@ -4004,7 +4007,7 @@ DBEnv_close(DBEnvObject* self, PyObject* args)
 
     if (!PyArg_ParseTuple(args, "|i:close", &flags))
         return NULL;
-    return DBEnv_close_internal(self,flags);
+    return DBEnv_close_internal(self, flags, 1);
 }
 
 
